--- a/app/Lib/Rscripts/report.Rmd
+++ b/app/Lib/Rscripts/report.Rmd
@@ -247,10 +247,10 @@ colours are based on multiple choice items with 3 or 4 answer options.
   bar_freq <- ggplot2::ggplot(
     correct_df,
     ggplot2::aes(item, correct_percentage, fill = perc_col))
-  bar_freq <- 
-    bar_freq + 
+  bar_freq <-
+    bar_freq +
     # Create bar chart
-    geom_bar(stat = "identity") + 
+    geom_bar(stat = "identity") +
     # Creat colour boundary
     scale_fill_gradient(
       low    = "red",
@@ -306,7 +306,7 @@ thus it is coloured *red*. *Between 0 and .05*, an item is coloured *orange*.
   bar_irc <- ggplot2::ggplot(
     correct_df,
     ggplot2::aes(item, corrected_item_tot_cor, fill = irc_col))
-  bar_irc <-  
+  bar_irc <-
     bar_irc +
     geom_bar(stat = "identity") +
     scale_fill_gradient(
@@ -472,10 +472,7 @@ calc_n_plot <- function(ans_opt_df, key) {
     if (n_plots > 1) {
       for (i in 2:n_plots) {
         items_in_plot[[i]] <- unique(
-          ans_opt_df[
-            (((i - 1) * answ_opts_per_plot) + 1):(i * answ_opts_per_plot),
-            1
-          ]
+          ans_opt_df[(((i - 1) * answ_opts_per_plot) + 1) : (i * answ_opts_per_plot), 1]
         )
         if (items_in_plot[[i]][1] %in% items_in_plot[[i - 1]]) {
           items_in_plot[[i]] <- items_in_plot[[i]][-1]
@@ -537,7 +534,7 @@ is coloured *orange* in between these two.
           fill   = Correct,
           colour = perc_col)
         )
-      bar_freq1 <- 
+      bar_freq1 <-
         bar_freq1 +
         geom_bar(aes(x = Answer.Option), stat = "identity", size = 1.5) +
         # Plot items
@@ -723,7 +720,7 @@ cum_hist <- function(student_scores, n_item) {
       df[(which(df[, 3] == 0, arr.ind = TRUE) + 1), 3]
   )
 
-  g <- 
+  g <-
     ggplot2::ggplot(
       data = df,
       ggplot2::aes(x = score, y = total)
